--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>字体列表（来自 Wine 运行器）</h1>
     <p>点击下方链接下载</p>
     <h3>推荐在 Wine 运行器内安装</h3>
-    <h3>更新时间：2023年1月22日 21:47:15</h3>
+    <h3>更新时间：2023年4月30日 20:6:13</h3>
     <p><a href='https://gitlink.org.cn/api/attachments/392168'>fake_simsun.ttc</a></p>
     <p><a href='https://gitlink.org.cn/api/attachments/392181'>simsun.ttc</a></p>
     <p><a href='https://gitlink.org.cn/api/attachments/392180'>simsunb.ttf</a></p>
@@ -23,11 +23,11 @@
     <h2>Wine 运行器</h2>
     <p><img src='https://gitee.com/gfdgd-xi-org/deep-wine-runner/widgets/widget_card.svg?colors=eae9d7,2e2f29,272822,484a45,eae9d7,747571'></p>
     <hr/>
-    <h1 id="copyright">©2020~2023 gfdgd xi、为什么您不喜欢熊出没和阿布呢</h1>
+    <h1 id="copyright">©2020~2023 gfdgd xi</h1>
 </body>
 <script>
     window.onload = function(){
         var d = new Date();
-        document.getElementById("copyright").innerHTML = "©2020~" + d.getFullYear() + " gfdgd xi、为什么您不喜欢熊出没和阿布呢";
+        document.getElementById("copyright").innerHTML = "©2020~" + d.getFullYear() + " gfdgd xi";
     }
 </script>
