--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <h1>字体列表（来自 Wine 运行器）</h1>
     <p>点击下方链接下载</p>
     <h3>推荐在 Wine 运行器内安装</h3>
-    <h3>更新时间：2023年4月30日 20:6:13</h3>
-    <p><a href='https://gitlink.org.cn/api/attachments/392168'>fake_simsun.ttc</a></p>
-    <p><a href='https://gitlink.org.cn/api/attachments/392181'>simsun.ttc</a></p>
-    <p><a href='https://gitlink.org.cn/api/attachments/392180'>simsunb.ttf</a></p>
-    <p><a href='https://gitlink.org.cn/api/attachments/392182'>msyh.ttc</a></p>
-    <p><a href='https://gitlink.org.cn/api/attachments/392184'>msyhl.ttc</a></p>
-    <p><a href='https://gitlink.org.cn/api/attachments/392183'>msyhbd.ttc</a></p>
+    <h3>更新时间：2023年4月30日 20:9:35</h3>
+    <p><a href='http://fonts.wine-runner.gfdgdxi.top/fake_simsun.ttc'>fake_simsun.ttc</a></p>
+    <p><a href='http://fonts.wine-runner.gfdgdxi.top/simsun.ttc'>simsun.ttc</a></p>
+    <p><a href='http://fonts.wine-runner.gfdgdxi.top/simsunb.ttf'>simsunb.ttf</a></p>
+    <p><a href='http://fonts.wine-runner.gfdgdxi.top/msyh.ttc'>msyh.ttc</a></p>
+    <p><a href='http://fonts.wine-runner.gfdgdxi.top/msyhl.ttc'>msyhl.ttc</a></p>
+    <p><a href='http://fonts.wine-runner.gfdgdxi.top/msyhbd.ttc'>msyhbd.ttc</a></p>
     <p><a href='https://gitee.com/gfdgd-xi-org/deep-wine-runner/stargazers'><img src='https://gitee.com/gfdgd-xi-org/deep-wine-runner/badge/star.svg?theme=dark' alt='star'></img></a><a href='https://gitee.com/gfdgd-xi-org/deep-wine-runner/members'><img src='https://gitee.com/gfdgd-xi-org/deep-wine-runner/badge/fork.svg?theme=dark' alt='fork'></img></a></p>
     <hr/>
     <h2>Wine 运行器</h2>
